--- a/index.html
+++ b/index.html
@@ -1,56 +1,133 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Colmar Academy</title>
-    <link rel="stylesheet" href="resources/css/index.css" type="text/css">
-  </head>
-  <body>
-    <header>
-      <div class="top">
-        <div class="logo">
-          <img src="resources/images/ic-logo.svg" alt="">
-          <span class="colmar">COLMAR</span>
-          <span class="academy">ACADEMY</span>
-        </div>
-          <nav>
-            <ul>
-              <a>On Campus</a>
-              <a>Online</a>
-              <a>For Companies</a>
-              <a>Sign in</a>
-            </ul>
-          </nav>
+<head>
+  <meta charset="utf-8">
+  <title>Colmar Academy</title>
+  <link rel="stylesheet" href="resources/css/index.css" type="text/css">
+</head>
+<body>
+  <header>
+    <div class="top">
+      <div class="logo">
+        <img src="resources/images/ic-logo.svg" alt="">
+        <span class="colmar">COLMAR</span>
+        <span class="academy">ACADEMY</span>
       </div>
-    </header>
-    <div class="banner-box">
-        <div class="banner-content">
-          <img src="resources/images/banner.jpg" alt="">
-          <div class="banner-text">
-            <h1>Learn something new everyday</h1>
-            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-            <div class="start_button">
-              <h3>Start here
-              </h3>
+      <nav>
+        <ul>
+          <a>On Campus</a>
+          <a>Online</a>
+          <a>For Companies</a>
+          <a>Sign in</a>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <div class="banner-box">
+    <div class="banner-content">
+      <img src="resources/images/banner.jpg" alt="">
+      <div class="banner-text">
+        <h1>Learn something new everyday</h1>
+        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+        <div class="start_button">
+          <h3>Start here
+          </h3>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="main-box">
+    <div class="main-content">
+      <div class="main-left">
+        <img src="resources/images/information-main.jpg" alt="">
+        <div class="text">
+          <h2>It doesn't hurt to keep practicing</h2>
+          <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <p class="Emanuel">Emanuel, Sr Stragtegist at Hiring.com</p>
+        </div>
+      </div>
+      <div class="information-box">
+        <div class="box-outline">
+          <div class="info1-box">
+            <img src="resources/images/information-orientation.jpg" alt="">
+            <div class="infotext">
+              <h4>Orientation</h4>
+              <p class="paragraph-container">Tue 10/11 & Wed 10/12: 8am-3pm</p>
+              <p>Read more</p>
+            </div>
+          </div>
+          <div class="info1-box">
+            <img src="resources/images/information-campus.jpg" alt="">
+            <div class="infotext">
+              <h4>Our Campus</h4>
+              <p class="paragraph-container">Find which campus is close by.</p>
+              <p>Read more</p>
+            </div>
+          </div>
+          <div class="info1-box backgroundcolor">
+            <img src="resources/images/information-guest-lecture.jpg" alt="">
+            <div class="infotext">
+              <h4>Our Guest Lecture</h4>
+              <p class="paragraph-container">Join a keynote with Oliver Sack about music in medical treatment</p>
+              <p>Read more</p>
             </div>
           </div>
         </div>
-    </div>
-    <div class="main-box">
-      <div class="main-content">
-        <div class="main-left">
-          <img src="resources/images/information-main.jpg" alt="">
-          <div class="text">
-            <h2>It doesn't hurt to keep practicing</h2>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            <p class="Emanuel">Emanuel, Sr Stragtegist at Hiring.com</p>
-          </div>
-
-        </div>
-
-
       </div>
-
     </div>
-  </body>
+  </div>
+  <div class="main-course">
+    <h1 class"learning">Start learning</h1>
+    <div class="course-boxes">
+      <div class="courses">
+        <img src="resources/images/course-software.jpg" alt="">
+        <div class="course-details">
+          <h3>Software Engineering</h3>
+          <h4>COURSES</h4>
+          <p class="paragraph-container">Web Development, Mobile Development, iOT, APIs</p>
+        </div>
+      </div>
+      <div class="courses">
+        <img src="resources/images/course-computer-art.jpg" alt="">
+        <div class="course-details computer-art-column">
+          <h3>Computer Art</h3>
+          <h4>COURSES</h4>
+          <p class="paragraph-container">Imaging& Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+        </div>
+      </div>
+      <div class="courses">
+        <img src="resources/images/course-design.jpg" alt="">
+        <div class="course-details">
+          <h3>Design</h3>
+          <h4>COURSES</h4>
+          <p class="paragraph-container">User Experience Design, User Research, Visual Design</p>
+        </div>
+      </div>
+      <div class="courses">
+        <img src="resources/images/course-data.jpg" alt="">
+        <div class="course-details">
+          <h3>Data</h3>
+          <h4>COURSES</h4>
+          <p class="paragraph-container">Data Science, Big Data, SQL, Data Visualization</p>
+        </div>
+      </div>
+      <div class="courses">
+        <img src="resources/images/course-business.jpg" alt="">
+        <div class="course-details">
+          <h3>Business</h3>
+          <h4>COURSES</h4>
+          <p class="paragraph-container">Product Development, Business Development, Startup</p>
+        </div>
+      </div>
+      <div class="courses">
+        <img src="resources/images/course-marketing.jpg" alt="">
+        <div class="course-details">
+          <h3>Marketing</h3>
+          <h4>COURSES</h4>
+          <p class="paragraph-container">Analytics, Content Marketing, Mobile Marketing</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
 </html>
