finsihed desktop ver

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <div class="top">
       <div class="logo">
         <img src="resources/images/ic-logo.svg" alt="">
+        <div class="mobile-logo">
+          <img src="resources/images/ic-logo.svg" alt="">
+          <img src="resources\images\ic-on-campus.svg" alt="">
+          <img src="resources\images\ic-online.svg" alt="">
+          <img src="resources\images\ic-login.svg" alt="">
+        </div>
         <span class="colmar">COLMAR</span>
         <span class="academy">ACADEMY</span>
       </div>
@@ -51,7 +57,7 @@
           <div class="info1-box">
             <img src="resources/images/information-orientation.jpg" alt="">
             <div class="infotext">
-              <h4>Orientation</h4>
+              <h2>Orientation</h2>
               <p class="paragraph-container">Tue 10/11 & Wed 10/12: 8am-3pm</p>
               <p>Read more</p>
             </div>
@@ -59,7 +65,7 @@
           <div class="info1-box">
             <img src="resources/images/information-campus.jpg" alt="">
             <div class="infotext">
-              <h4>Our Campus</h4>
+              <h2>Our Campus</h2>
               <p class="paragraph-container">Find which campus is close by.</p>
               <p>Read more</p>
             </div>
@@ -67,7 +73,7 @@
           <div class="info1-box backgroundcolor">
             <img src="resources/images/information-guest-lecture.jpg" alt="">
             <div class="infotext">
-              <h4>Our Guest Lecture</h4>
+              <h2>Our Guest Lecture</h2>
               <p class="paragraph-container">Join a keynote with Oliver Sack about music in medical treatment</p>
               <p>Read more</p>
             </div>
@@ -82,52 +88,87 @@
       <div class="courses">
         <img src="resources/images/course-software.jpg" alt="">
         <div class="course-details">
-          <h3>Software Engineering</h3>
-          <h4>COURSES</h4>
+          <h2>Software Engineering</h2>
+          <h3>COURSES</h3>
           <p class="paragraph-container">Web Development, Mobile Development, iOT, APIs</p>
         </div>
       </div>
       <div class="courses">
         <img src="resources/images/course-computer-art.jpg" alt="">
         <div class="course-details computer-art-column">
-          <h3>Computer Art</h3>
-          <h4>COURSES</h4>
+          <h2>Computer Art</h2>
+          <h3>COURSES</h3>
           <p class="paragraph-container">Imaging& Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
         </div>
       </div>
       <div class="courses">
         <img src="resources/images/course-design.jpg" alt="">
         <div class="course-details">
-          <h3>Design</h3>
-          <h4>COURSES</h4>
+          <h2>Design</h2>
+          <h3>COURSES</h3>
           <p class="paragraph-container">User Experience Design, User Research, Visual Design</p>
         </div>
       </div>
       <div class="courses">
         <img src="resources/images/course-data.jpg" alt="">
         <div class="course-details">
-          <h3>Data</h3>
-          <h4>COURSES</h4>
+          <h2>Data</h2>
+          <h3>COURSES</h3>
           <p class="paragraph-container">Data Science, Big Data, SQL, Data Visualization</p>
         </div>
       </div>
       <div class="courses">
         <img src="resources/images/course-business.jpg" alt="">
         <div class="course-details">
-          <h3>Business</h3>
-          <h4>COURSES</h4>
+          <h2>Business</h2>
+          <h3>COURSES</h3>
           <p class="paragraph-container">Product Development, Business Development, Startup</p>
         </div>
       </div>
       <div class="courses">
         <img src="resources/images/course-marketing.jpg" alt="">
         <div class="course-details">
-          <h3>Marketing</h3>
-          <h4>COURSES</h4>
+          <h2>Marketing</h2>
+          <h3>COURSES</h3>
           <p class="paragraph-container">Analytics, Content Marketing, Mobile Marketing</p>
         </div>
       </div>
     </div>
   </div>
+  <div class="main-thesis">
+    <h1>Thesis exhibit</h1>
+    <div class="thesis-boxes">
+      <div class="video">
+        <video src="resources\videos\thesis.mp4" autoplay poster="posterimage.jpg">
+        </video>
+        <div class="text">
+          <h2>Reimagine urban</h2>
+          <p>Curabitur vitae libero in ipsum portitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, effcitur dolor consequat, tristque ligula.</p>
+        </div>
+      </div>
+      <div class="thesis-details">
+        <div class="fisma design">
+          <img src="resources\images\thesis-fisma.jpg" alt="" class="pic">
+          <div class="text">
+            <h2>Fisma: Design and Prototype</h2>
+            <p>Designer showcase of new prototype product</p>
+          </div>
+
+        </div>
+        <div class="research design">
+          <img src="resources\images\thesis-now-and-then.jpg" alt="" class="pic">
+          <div class="text">
+            <h2>Now and then</h2>
+            <p>Research study about New York</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <span>© 2016 Colmar Academy. All rights reserved</span>
+    <span>Terms Privacy</span>
+  </footer>
+
 </body>
 </html>
