--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
     <div class="top">
       <div class="logo">
-        <img src="resources/images/ic-logo.svg" alt="">
+        <img class="desktop" src="resources/images/ic-logo.svg" alt="">
         <div class="mobile-logo">
           <img src="resources/images/ic-logo.svg" alt="">
           <img src="resources\images\ic-on-campus.svg" alt="">
@@ -59,7 +59,7 @@
             <div class="infotext">
               <h2>Orientation</h2>
               <p class="paragraph-container">Tue 10/11 & Wed 10/12: 8am-3pm</p>
-              <p>Read more</p>
+              <p class="read">Read more</p>
             </div>
           </div>
           <div class="info1-box">
@@ -67,7 +67,7 @@
             <div class="infotext">
               <h2>Our Campus</h2>
               <p class="paragraph-container">Find which campus is close by.</p>
-              <p>Read more</p>
+              <p class="read">Read more</p>
             </div>
           </div>
           <div class="info1-box backgroundcolor">
@@ -75,7 +75,7 @@
             <div class="infotext">
               <h2>Our Guest Lecture</h2>
               <p class="paragraph-container">Join a keynote with Oliver Sack about music in medical treatment</p>
-              <p>Read more</p>
+              <p class="read">Read more</p>
             </div>
           </div>
         </div>
@@ -167,7 +167,7 @@
   </div>
   <footer>
     <span>© 2016 Colmar Academy. All rights reserved</span>
-    <span>Terms Privacy</span>
+    <span class="terms">Terms Privacy</span>
   </footer>
 
 </body>
