--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
       <div class="information-box">
         <div class="box-outline">
           <div class="info1-box">
-            <img src="resources/images/information-orientation.jpg" alt="">
+            <img class="desktop"src="resources/images/information-orientation.jpg" alt="">
+            <img class="mobile" src="resources/images/information-orientation-mobile.jpg" alt="">
             <div class="infotext">
               <h2>Orientation</h2>
               <p class="paragraph-container">Tue 10/11 & Wed 10/12: 8am-3pm</p>
@@ -63,7 +64,8 @@
             </div>
           </div>
           <div class="info1-box">
-            <img src="resources/images/information-campus.jpg" alt="">
+            <img class="desktop" src="resources/images/information-campus.jpg" alt="">
+            <img class="mobile" src="resources/images/information-campus-mobile.jpg" alt="">
             <div class="infotext">
               <h2>Our Campus</h2>
               <p class="paragraph-container">Find which campus is close by.</p>
@@ -71,7 +73,8 @@
             </div>
           </div>
           <div class="info1-box backgroundcolor">
-            <img src="resources/images/information-guest-lecture.jpg" alt="">
+            <img class="desktop" src="resources/images/information-guest-lecture.jpg" alt="">
+            <img class="mobile" src="resources/images/information-guest-lecture-mobile.jpg" alt="">
             <div class="infotext">
               <h2>Our Guest Lecture</h2>
               <p class="paragraph-container">Join a keynote with Oliver Sack about music in medical treatment</p>
@@ -153,7 +156,6 @@
             <h2>Fisma: Design and Prototype</h2>
             <p>Designer showcase of new prototype product</p>
           </div>
-
         </div>
         <div class="research design">
           <img src="resources\images\thesis-now-and-then.jpg" alt="" class="pic">
@@ -169,6 +171,5 @@
     <span>© 2016 Colmar Academy. All rights reserved</span>
     <span class="terms">Terms Privacy</span>
   </footer>
-
 </body>
 </html>
